--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="css/styles.css" rel="stylesheet" />
 
 </head>
 
@@ -162,10 +162,17 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Hi</p>
+                    <p class="lead">Hi am Armando Gonzalez I'm in Computer Science student at the University of Texas
+                        Rio
+                        Grande
+                        Valley </p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">Hola</p>
+                    <p class="lead">Hola soy Armando Gonzalez estudio Ciencias de la computacion en la "University of
+                        Texas
+                        Rio
+                        Grande
+                        Valley"</p>
                 </div>
             </div>
             <!-- About Section Button-->
@@ -286,9 +293,7 @@
 
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
                                     src="assets/img/portfolio/circus.png" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                <p class="mb-5">
                                 </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
