--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
                                     <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/escuela.png">
                                     <img class="img-fluid rounded mb-5 mySlides"
                                         src="assets/img/portfolio/escuela2.png">
+                                    <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/police.png">
+                                    <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/police2.png">
                                     <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/store.png">
-
                                     <button class="w3-button w3-black w3-display-left"
                                         onclick="plusDivs(-1)">&#10094;</button>
                                     <button class="w3-button w3-black w3-display-right"
