--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                     In this project i was in charge of the develop of Mini-Games, the Main Area
                                     Events
                                     and
-                                    teh UI
+                                    the UI
 
                                 </p>
                                 <button class="btn btn-primary"
