--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <!-- Masthead Subheading-->
             <p class="masthead-subheading font-weight-light mb-0">arma.glz@outlook.com</p>
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light"
-                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNdIhHOV93M3TATBY?e=6j6Zkf"><i
+                <a class="btn btn-xl btn-outline-light" href="https://1drv.ms/b/s!Aj2sWGnKBNCNfHKIg6DqWRkEUzw"><i
                         class="fas fa-download mr-2"></i>Resume</a>
             </div>
         </div>
@@ -177,8 +176,7 @@
             </div>
             <!-- About Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light"
-                    href="https://1drv.ms/b/s!Aj2sWGnKBNCNdIhHOV93M3TATBY?e=6j6Zkf"><i
+                <a class="btn btn-xl btn-outline-light" href="https://1drv.ms/b/s!Aj2sWGnKBNCNfHKIg6DqWRkEUzw"><i
                         class="fas fa-download mr-2"></i>Resume</a>
             </div>
         </div>
