--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/pedT.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 3-->
@@ -161,7 +161,7 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">Hi am Armando Gonzalez I'm in Computer Science student at the University of Texas
+                    <p class="lead">Hi am Armando Gonzalez a Computer Science student at the University of Texas
                         Rio
                         Grande
                         Valley </p>
@@ -213,7 +213,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
-                                    src="assets/img/portfolio/cabin.png" alt="" /><!-- Portfolio Modal - Text-->
+                                    src="assets/img/portfolio/pedT.png" alt="" /><!-- Portfolio Modal - Text-->
                                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
                                     assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
                                     velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
@@ -240,7 +240,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Pedigree Tree Maker
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Pedigree Visualizer
                                 </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
@@ -249,7 +249,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
-                                    src="assets/img/portfolio/cabin.png" alt="" /><!-- Portfolio Modal - Text-->
+                                    src="assets/img/portfolio/pedT.png" alt="" /><!-- Portfolio Modal - Text-->
                                 <p class="mb-5">Pedigree visualizer was developedon Java Scriptis a toolthat
                                     helplaboratory research with multiple subject familiesto track diseaseor genotypes
                                     betweengenerations. This softwareacceptsa format text file and generatedan
