--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <!-- <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" /> -->
+                        <img class="img-fluid" src="assets/img/portfolio/featuremandf.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 5-->
-                <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                <div class=" col-md-6 col-lg-4 mb-5 mb-md-0">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -193,8 +193,8 @@
     </div>
     <!-- Portfolio Modals-->
     <!-- Portfolio Modal 1-->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog"
-        aria-labelledby="portfolioModal1Label" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog"
+        aria-labelledby="portfolioModal2Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
@@ -205,7 +205,8 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Pedigree Visualizer
+                                </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -214,9 +215,11 @@
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
                                     src="assets/img/portfolio/pedT.png" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                <p class="mb-5">Pedigree visualizer was developedon Java Scriptis a tool that
+                                    helplaboratory research with multiple subject familiesto track diseaseor genotypes
+                                    betweengenerations. This softwareacceptsa format text file and generatedan
+                                    interactivepedigree tree with the given information, calculating position for each
+                                    subject on the images and avoid subject overlapping.
                                 </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
@@ -315,7 +318,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">game
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Math & Fantasy
                                 </h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
@@ -324,13 +327,14 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
-                                    src="assets/img/portfolio/game.png" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                    assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
-                                    velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+                                    src="assets/img/portfolio/featuremandf.png" alt="" /><!-- Portfolio Modal - Text-->
+                                <p class="mb-5">“Math and Fantasy”is mobile game made with Unity using
+                                    C# for android devices. This game is an Arcade game when the player must resolve
+                                    basic math problems to get point, while different enemies appear on the screen and
+                                    modify the visual of the options
                                 </p>
-                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i
-                                        class="fas fa-times fa-fw"></i>Close Window</button>
+                                <button class="btn btn-primary"
+                                    onclick="window.location.href ='https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy' ;"><i></i>Play</button>
                             </div>
                         </div>
                     </div>
@@ -365,16 +369,15 @@
                                     <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/mainMap.png">
                                     <img class="img-fluid rounded mb-5 mySlides"
                                         src="assets/img/portfolio/mainMap2.png">
-                                    <img class="img-fluid rounded mb-5 mySlides"
-                                        src="assets/img/portfolio/hospital.png">
+
                                     <img class="img-fluid rounded mb-5 mySlides"
                                         src="assets/img/portfolio/hospital2.png">
-                                    <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/escuela.png">
+
                                     <img class="img-fluid rounded mb-5 mySlides"
                                         src="assets/img/portfolio/escuela2.png">
-                                    <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/police.png">
+
                                     <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/police2.png">
-                                    <img class="img-fluid rounded mb-5 mySlides" src="assets/img/portfolio/store.png">
+
                                     <button class="w3-button w3-black w3-display-left"
                                         onclick="plusDivs(-1)">&#10094;</button>
                                     <button class="w3-button w3-black w3-display-right"
