--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                 <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5"
                                     src="assets/img/portfolio/featuremandf.png" alt="" /><!-- Portfolio Modal - Text-->
                                 <p class="mb-5">“Math and Fantasy”is mobile game made with Unity using
-                                    C# for android devices. This game is an Arcade game when the player must resolve
+                                    C# for android devices. This game is an Arcade game where the player must resolve
                                     basic math problems to get point, while different enemies appear on the screen and
                                     modify the visual of the options
                                 </p>
