--- a/index.html
+++ b/index.html
@@ -72,45 +72,48 @@
             <div class="row">
                 <!-- Portfolio Item 1-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
-                        <div
-                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i
-                                    class="fas fa-plus fa-3x"></i></div>
-                        </div>
-                        <!-- <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" /> -->
-                    </div>
-                </div>
-                <!-- Portfolio Item 2-->
-                <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/pedT.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/pedT - Copy.png" alt="" />
                     </div>
                 </div>
-                <!-- Portfolio Item 3-->
-                <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                <!-- Portfolio Item 2-->
+                <div class=" col-md-6 col-lg-4 mb-5 mb-md-0">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <!-- <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" /> -->
+                        <img class="img-fluid" src="assets/img/portfolio/mainMenu - Copy.png" alt="" />
+                    </div>
+                </div>
+                <!-- Portfolio Item 3-->
+                <div class=" col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i
+                                    class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/featuremandf - Copy.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Section Heading-->
                 <!-- Icon Divider-->
                 <!-- <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2> -->
-                <div class="divider-custom">
+
+                <!-- <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
+                </div> -->
+
+
                 <!-- Portfolio Item 4-->
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
@@ -119,7 +122,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/featuremandf.png" alt="" />
+                        <!-- <img class="img-fluid" src="assets/img/portfolio/featuremandf.png" alt="" /> -->
                     </div>
                 </div>
                 <!-- Portfolio Item 5-->
@@ -130,7 +133,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/mainMenu.png" alt="" />
+                        <!-- <img class="img-fluid" src="assets/img/portfolio/mainMenu.png" alt="" /> -->
                     </div>
                 </div>
                 <!-- Portfolio Item 6-->
@@ -333,8 +336,11 @@
                                     basic math problems to get point, while different enemies appear on the screen and
                                     modify the visual of the options
                                 </p>
-                                <button class="btn btn-primary"
-                                    onclick="window.location.href ='https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy' ;"><i></i>Play</button>
+                                <!-- <button class="btn btn-primary"
+                                    onclick="window.location.href ='https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy' ;"><i></i>Play</button> -->
+                                <a href="https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy"
+                                    target="_blank" rel="noopener noreferrer" style="width:50px;height:100px;"><img
+                                        src="assets/img/portfolio/google.png"></a>
                             </div>
                         </div>
                     </div>
