--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <a class="btn btn-xl btn-outline-light" href="https://1drv.ms/b/s!Aj2sWGnKBNCNf5iLIw_8qKtmlnc"><i
                         class="fas fa-download mr-2"></i>Resume</a>
             </div>
+            <div class="text-center mt-4">
+                <a href="https://www.linkedin.com/in/armaglz/" target="_blank" rel="noopener noreferrer"
+                    style="width:50px;height:100px;"><img src="assets/img/portfolio/linkedin-3-xxl.png"></a>
+            </div>
         </div>
     </header>
     <!-- Portfolio Section-->
@@ -411,11 +415,11 @@
                                 <p class="mb-5">“Math and Fantasy”is mobile game made with Unity using
                                     C# for android devices. This game is an Arcade game where the player must resolve
                                     basic math problems to get point, while different enemies appear on the screen and
-                                    modify the visual of the options
+                                    modify the visual of the options(Update on Google Play Revision)
                                 </p>
                                 <!-- <button class="btn btn-primary"
                                     onclick="window.location.href ='https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy' ;"><i></i>Play</button> -->
-                                <a href="https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasy"
+                                <a href="https://play.google.com/store/apps/details?id=com.armaglz.MathandFantasyv2"
                                     target="_blank" rel="noopener noreferrer" style="width:50px;height:100px;"><img
                                         src="assets/img/portfolio/google.png"></a>
                             </div>
